--- a/hw3/index.html
+++ b/hw3/index.html
@@ -44,7 +44,7 @@
 <h2 align="middle">Shaoyuan Gao(S)</h2>
 
 <!-- Add Website URL -->
-<h2 align="middle">Website URL: <a href="https://github.com/cal-cs184-student/hw-webpages-sp24-Sygono/tree/master/hw3">TODO</a></h2>
+<h2 align="middle">Website URL: <a href="TODO">https://github.com/cal-cs184-student/hw-webpages-sp24-Sygono/tree/master/hw3</a></h2>
 
 <br><br>
 
